Add Product and Vendor
Finished add product and vendor with relationship prod-mad_by-vendor.  Changed product index to products and updated the file for more features

--- a/templates/assessments/index.html
+++ b/templates/assessments/index.html
@@ -11,7 +11,7 @@
                     <div class="col-md-6">
                         <div class="card card-chart">
                             <div class="card-header card-header-warning">
-                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CDM Assessments</strong></h4></div>
+                                <h4><strong>CDM Assessments</strong></h4>
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">Current Score: 3</h4>
@@ -35,7 +35,7 @@
                     <div class="col-md-6">
                         <div class="card card-chart">
                             <div class="card-header card-header-warning">
-                                <div class="ct-chart" id="dailySalesChart"><h4><strong>CSF Assessments</strong></h4></div>
+                                <h4><strong>CSF Assessments</strong></h4>
                             </div>
                             <div class="card-body table-responsive">
                                 <table class="table table-hover">
@@ -71,7 +71,6 @@
                             <div class="card-footer">
                                 <a href="/assessments/prep"><btn class="btn btn-warning btn-sm" onclick="window.location.href='/assessments/prep';">Prepare New CSF Assessment</btn></a>
                             </div>
-
                         </div>
                     </div>
                 </div>
