--- a/templates/shared/_dashboard.html
+++ b/templates/shared/_dashboard.html
@@ -69,27 +69,21 @@ The above copyright notice and this permission notice shall be included in all c
                 <li class="nav-item ">
                     <a class="nav-link" href="/products">
                         <i class="material-icons">list</i>
-                        <p>Products Index</p>
-                    </a>
-                </li>
-                <li class="nav-item ">
-                    <a class='nav-link' href="/products/add">
-                        <i class="material-icons">add_box</i>
-                        <p>Add Product</p>
+                        <p>Products</p>
                     </a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/vendors">
                         <i class="material-icons">toc</i>
-                        <p>Vendors Directory</p>
+                        <p>Vendors</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="/frameworks/info">
-                        <i class="material-icons">bubble_chart</i>
-                        <p>Frameworks Info</p>
-                    </a>
-                </li>
+{#                <li class="nav-item ">#}
+{#                    <a class="nav-link" href="/frameworks/info">#}
+{#                        <i class="material-icons">bubble_chart</i>#}
+{#                        <p>Frameworks Info</p>#}
+{#                    </a>#}
+{#                </li>#}
 
 
 {#                <li class="nav-item active-pro ">#}
