--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -29,12 +29,20 @@
                             <div class="col-sm-12">
                                 <div class="form-check label-floating">
                                     <label class="control-label">Select Product Type</label>
-                                    <select class="form-control" name="vendor">
+                                    <select class="form-control" name="prod_type">
                                         <option value="" selected>---</option>
                                         <option value="Commercial">Commercial</option>
                                         <option value="FOSS">Free Open Source</option>
                                         <option value="In-House">In-House</option>
                                     </select>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="togglebutton">
+                                    <label>
+                                        <input type="checkbox" id="toolkit_add" name="toolkit_add" value="Yes" checked="">
+                                        <span class="toggle"></span>Add to your toolkit?
+                                    </label>
                                 </div>
                             </div>
                             <div class="col-sm-12" style="margin-top: 20px;">
